--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 -----------------------------------------------------------------------------------------*/
 
 body {
-	font-family: 'Swissra Font';
+	/*font-family: 'Swissra Font';*/
 	font-size: 16px;
 	font-weight: 300;
 	color: #777;
