--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,16 @@
 body {
 	/*font-family: 'Open Sans', sans-serif;*/
   font-family: 'Swissra Font';
-	font-size: 24px;
+	font-size: 18px;
 	font-weight: 300;
-	color: #777;
+	color: #888;
+	background:#222;
 	line-height: 1.6;
 	text-align: center;
 }
 
 a {
-	color: #444;
+	color: #ddd;
 	text-decoration: none;
 	-webkit-transition: all 0.25s ease-out;
 	-moz-transition: all 0.25s ease-out;
@@ -60,46 +61,25 @@ h2,
 h3,
 h4 {
 	text-transform: uppercase;
-	color: #444;
+	color: #ccc;
 	font-weight: lighter;
 	line-height: 1.2;
 	margin: 30px 0 10px 0;
 }
 
-.product {
-
-	/* background-color: #00aced;
-	height: 100%;*/
-	/* width: 21.33333%; */
-	/* margin: 1.2%; */
-	background-color: #00aeff;
-	align-content: center; 
-	border: 3px solid white;
-}
-
-
-
 h1.sep,
 h2.sep,
 h3.sep,
 h4.sep {
-	margin: 80px 0 20px 0;
+	margin:80px 0 20px 0;
 }
 
 h1 strong,
 h2 strong,
 h3 strong,
 h4 strong {
-	font-weight: bold;
-	text-transform: none;
-}
-
-
-
-.changeDis{
-	position: absolute;
-	top: 1;
-	left: ;
+	font-weight:bold;
+	text-transform:none;
 }
 
 ul {
@@ -115,14 +95,14 @@ ul {
 section {
 	padding: 120px 0;
 	position: relative;
-	background: #fff;
+	background: #222;
 	z-index: 2;
 	overflow: hidden;
 }
 
 blockquote,
 code {
-	background: #f8f8f8;
+	background: #333;
 	padding: 25px 25px 25px 75px;
 	display: block;
 	position: relative;
@@ -133,7 +113,7 @@ code {
 }
 
 code {
-	color: #03C;
+	color: #0Cf;
 	overflow: auto;
 }
 
@@ -182,6 +162,8 @@ blockquote small {
 	padding: 20px 25px;
 	font-size: inherit;
 	height: auto;
+    background:inherit;
+	color:inherit;
 }
 
 .form-group .btn {
@@ -194,7 +176,7 @@ blockquote small {
 .input-group input,
 .form-group textarea,
 button {
-	color: #222;
+	color: #fff;
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	border: 0;
@@ -376,7 +358,7 @@ button {
 
 
 .round-btn {
-	border: 2px solid #ddd;
+	border: 2px solid #444;
 	border-radius: 30px;
 	display: inline-block;
 	padding: 0 30px;
@@ -386,7 +368,7 @@ button {
 
 .round-btn-sm {
 	font-size: 14px;
-	border: 1px solid #ddd;
+	border: 1px solid #444;
 	display: inline-block;
 	padding: 0 15px;
 	border-radius: 18px;
@@ -395,12 +377,12 @@ button {
 }
 
 .round-btn:hover {
-	color: #444;
+	color: #fff;
 	border: 2px solid #00aeff;
 }
 
 .round-btn-sm:hover {
-	color: #444;
+	color: #fff;
 	border: 1px solid #00aeff;
 }
 
@@ -448,7 +430,7 @@ button {
 }
 
 .bg-color2 {
-	background-color: #f8f8f8;
+	background-color: #2a2a2a;
 }
 
 .bg-color3 {
@@ -521,8 +503,8 @@ button {
 .item-list-right li .icon {
 	font-size: 32px;
 	position: absolute;
-	right: -37px;
-	top: -18px;
+	right: -48px;
+	top: -22px;
 }
 
 .item-list-left li {
@@ -561,14 +543,15 @@ button {
 }
 
 .panel {
-	border: 1px solid #ddd;
+	border: 1px solid #333;
 	box-shadow: none;
 	-webkit-box-shadow: none;
+    background: #222;
 }
 
 .panel-heading {
 	display: block;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #333;
 	font-weight: bold;
 	padding: 20px 25px;
 }
@@ -582,11 +565,19 @@ button {
 }
 
 .tab-content {
-	border-right: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
-	border-left: 1px solid #ddd;
+	border-right: 1px solid #333;
+	border-bottom: 1px solid #333;
+	border-left: 1px solid #333;
 	border-radius: 0 0 4px 4px;
 	padding: 25px;
+}
+
+.nav-tabs{
+	border-bottom:1px solid #333;
+}
+
+.nav-tabs>li>a:hover {
+border-color: #333 #333 #222;
 }
 
 .nav-tabs li a {
@@ -594,9 +585,14 @@ button {
 	font-weight: bold;
 }
 
-.nav-tabs li.active a,
-.nav-tabs li.active a:hover {
-	color: #00aeff
+.nav-tabs>li.active>a, 
+.nav-tabs>li.active>a:hover, 
+.nav-tabs>li.active>a:focus {
+
+background-color: #222;
+border: 1px solid #333;
+border-bottom-color: transparent;
+cursor: default;
 }
 
 .nav-tabs li a:hover {
@@ -671,9 +667,9 @@ button {
 
 	.nav-tabs>li a {
 		display: block;
-		border-top: 1px solid #ddd;
-		border-right: 1px solid #ddd;
-		border-left: 1px solid #ddd;
+		border-top: 1px solid #333;
+		border-right: 1px solid #333;
+		border-left: 1px solid #333;
 		border-radius: 0;
 		margin: 0;
 	}
@@ -686,7 +682,7 @@ button {
 	.nav-tabs>li.active>a,
 	.nav-tabs>li.active>a:hover,
 	.nav-tabs>li.active>a:focus {
-		border-color: #ddd;
+		border-color: #333;
 	}
 }
 
@@ -696,7 +692,7 @@ button {
 ----------------------------------------------------------------------------------------*/
 
 #preloader {
-	background: #fff;
+	background: #222;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -849,6 +845,12 @@ button {
 	color: #ce0b0b;
 }
 
+.modal .form-group input,
+.modal .input-group input,
+.modal .form-group textarea{ 
+	color:#222;
+}
+
 .modal-open {
 	overflow: auto;
 }
@@ -968,7 +970,7 @@ button {
 	width: 100%;
 	height: 2px;
 	display: block;
-	background: #eee;
+	background: #444;
 	position: absolute;
 	bottom: 50%;
 }
@@ -1504,8 +1506,8 @@ button#contact_submit:hover, button#contact_submit1:hover {
 
 nav.navbar-fixed-top {
 	height: 60px;
-	background: #fff;
-	border-bottom: 2px solid #eee;
+	background: #1a1a1a;
+	border-bottom: 2px solid #111;
 	-webkit-transition: all 0.8s ease-in-out;
 	-moz-transition: all 0.8s ease-in-out;
 	-ms-transition: all 0.8s ease-in-out;
@@ -1535,12 +1537,12 @@ nav.navbar-slide.show-menu {
 
 .navbar .nav li a {
 	display: block;
-	font-size: 14px;
+	font-size: 20px;
 	height: 60px;
 	line-height: 60px;
 	padding: 0 20px;
 	text-decoration: none;
-	border-bottom: 2px solid #eee;
+	border-bottom: 2px solid #111;
 	outline: none;
 	background: inherit;
 }
@@ -1590,8 +1592,8 @@ nav.navbar-slide.show-menu {
 	line-height: 60px;
 	font-size: 24px;
 	padding: 0 20px;
-	border-left: 1px solid #eee;
-	color: #ccc;
+	border-left: 1px solid #111;
+	color: #666;
 }
 
 
@@ -1599,7 +1601,10 @@ nav.navbar-slide.show-menu {
 	.navbar-collapse {
 		width: 100%;
 		padding: 0;
-		background: #fff;
+		background: #1a1a1a;
+        box-shadow:none;
+	-webkit-box-shadow:none;
+	-moz-box-shadow:none;
 	}
 
 	.navbar .nav {
@@ -1612,7 +1617,7 @@ nav.navbar-slide.show-menu {
 	}
 
 	.navbar .nav li a {
-		border-bottom: 1px solid #eee;
+		border-bottom: 1px solid #222;
 	}
 
 	.navbar .nav li a:hover,
@@ -1634,7 +1639,7 @@ aside.blog-sidebar {
 }
 
 aside.blog-sidebar .search #search_form {
-	border: 1px solid #ddd;
+	border: 1px solid #444;
 }
 
 aside.blog-sidebar .search .form-control {
@@ -1659,7 +1664,7 @@ aside.blog-sidebar .widget {
 
 aside.blog-sidebar .widget h3 {
 	padding: 0 0 20px 0;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #333;
 	margin: 0;
 }
 
@@ -1671,7 +1676,7 @@ aside.blog-sidebar .category ul a {
 	text-decoration: none;
 	display: block;
 	padding: 15px 0;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #333;
 }
 
 aside.blog-sidebar .category ul a:hover {
@@ -1679,7 +1684,7 @@ aside.blog-sidebar .category ul a:hover {
 }
 
 aside.blog-sidebar .recent_posts ul li {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #333;
 	padding: 15px 50px 15px 0;
 	position: relative;
 }
@@ -1701,11 +1706,11 @@ aside.blog-sidebar .recent_posts .comments {
 	top: 15px;
 	right: 0;
 	font-size: 14px;
-	color: #aaa;
+	color: #666;
 }
 
 aside.blog-sidebar .recent_posts .comments .icon {
-	color: #aaa;
+	color: #666;
 	padding-right: 5px;
 }
 
@@ -1728,8 +1733,8 @@ aside.blog-sidebar .tag_cloud h4 {
 	margin: 0 0 4px 0;
 	text-decoration: none;
 	font-size: 12px;
-	color: #888;
-	background: #eee;
+	color: #aaa;
+	background: #333;
 	border-radius: 2px;
 }
 
@@ -1740,8 +1745,8 @@ aside.blog-sidebar .tag_cloud h4 {
 
 .tags.hollow li a {
 	background: none;
-	border: 1px solid #eee;
-	color: #ccc;
+	border: 1px solid #333;
+	color: #aaa;
 }
 
 .tags.hollow li a:hover {
@@ -1806,7 +1811,7 @@ aside.blog-sidebar .tag_cloud h4 {
 }
 
 .intro-block .block-bg {
-	background-image: url(../images/oc.jpg);
+background-size: cover;
 	opacity: 0.7;
 }
 
@@ -1981,28 +1986,56 @@ aside.blog-sidebar .tag_cloud h4 {
 
 
 
-
 /*----------------------------------------------------------------------------------------
 										FEATURES
 ----------------------------------------------------------------------------------------*/
 
 #features .screen {
-	max-width: 100%;
-	height: auto;
+	max-width: 91%;
+    height: auto;
 }
 
 #features .icon {
 	color: #aaa;
 }
+@media (max-width: 980px) and (min-width: 767px) {
+	#features .screen {
+		/*display: none;*/
+		 max-width: 100%;
+		height: auto;
+		position: relative;
+		left: -3%	 
+	}
+}
 
+@media (max-width: 1200px) and (min-width: 980px) {
+	
+	#features .screen {
+		max-width: 100%;
+		height: auto;
+		position: absolute;
+		left: 14%	
+	}
+}
 @media (max-width: 1200px) and (min-width: 767px) {
 
 	#features .icon {
-		display: none;
+		position: absolute;
+		/* left:570px; */
+		width: 35%;
+		margin: 1% -20% 0 0px;
+
 	}
 
-	.item-list-right.item-list-big li,
-	.item-list-left.item-list-big li {
+
+	.iconparent .icon2 {
+		width: 35%;
+		margin: 0% 3% 0 0px;
+
+	}
+
+	.item-list-right .item-list-big li,
+	.item-list-left .item-list-big li {
 		padding: 0 0px 40px 0px;
 	}
 
@@ -2026,6 +2059,95 @@ aside.blog-sidebar .tag_cloud h4 {
 	}
 
 }
+
+/*----------------------------------------------------------------------------------------
+										INNOVATIONS
+----------------------------------------------------------------------------------------*/
+
+#innovations .screen {
+	margin-bottom: -230px;
+	max-width: 100%;
+	height: auto;
+}
+
+#innovations .ray {
+	position: absolute;
+	-webkit-box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, .7);
+	-moz-box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, .7);
+	box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, .7);
+}
+
+@-webkit-keyframes plane {
+	0% {
+		-webkit-transform: translateY(0);
+		transform: translateX(0);
+	}
+
+	50% {
+		-webkit-transform: translateY(30px);
+		transform: translateY(30px);
+	}
+
+	100% {
+		-webkit-transform: translateY(0);
+		transform: translateX(0);
+	}
+}
+
+@keyframes plane {
+	0% {
+		-webkit-transform: translateY(0);
+		-ms-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	40% {
+		-webkit-transform: translateY(30px);
+		-ms-transform: translateY(30px);
+		transform: translateY(30px);
+	}
+
+	100% {
+		-webkit-transform: translateY(0);
+		-ms-transform: translateY(0);
+		transform: translateY(0);
+	}
+}
+
+#innovations #ray1 {
+	bottom: 30px;
+	animation: plane 0.8s linear 0s infinite;
+	-webkit-animation: plane 0.8s linear 0s infinite;
+}
+
+#innovations #ray2 {
+	bottom: 60px;
+	animation: plane 1.2s linear 0s infinite;
+	-webkit-animation: plane 1.2s linear 0s infinite;
+}
+
+#innovations #ray3 {
+	bottom: 90px;
+	animation: plane 0.9s linear 0s infinite;
+	-webkit-animation: plane 0.9s linear 0s infinite;
+}
+
+#innovations #ray4 {
+	bottom: 120px;
+	animation: plane 1.7s linear 0s infinite;
+	-webkit-animation: plane 1.7s linear 0s infinite;
+	opacity: 0.6;
+}
+
+@media (max-width: 992px) {
+
+	#innovations .screen {
+		margin-bottom: 0px;
+	}
+
+}
+
+
 
 
 
@@ -2129,8 +2251,8 @@ aside.blog-sidebar .tag_cloud h4 {
 }
 
 .img-block-2col .title h2:after {
-	left: 0;
 	margin-left: 0;
+	left: 85%;
 }
 
 .screen-couple-right,
@@ -2195,7 +2317,6 @@ aside.blog-sidebar .tag_cloud h4 {
 	}
 
 	.img-block-2col .title h2:after {
-		left: 50%;
 		margin-left: -40px;
 	}
 
@@ -2243,7 +2364,7 @@ aside.blog-sidebar .tag_cloud h4 {
 .facts-list .icon {
 	display: block;
 	font-size: 64px;
-	color: #ddd;
+	color: #666;
 	-webkit-transition: all 0.4s ease-in-out;
 	-moz-transition: all 0.4s ease-in-out;
 	-ms-transition: all 0.4s ease-in-out;
@@ -2255,7 +2376,7 @@ aside.blog-sidebar .tag_cloud h4 {
 .facts-list h3 {
 	font-size: 50px;
 	font-weight: bold;
-	color: #222;
+	color: #fff;
 	margin: 0 0 10px 0;
 }
 
@@ -2351,11 +2472,13 @@ ul.pricing-table h3 {
 	margin: 0;
 	border-radius: 5px 5px 0 0;
 	border-bottom: 2px dotted #eee;
+    color:#444;
 }
 
 ul.pricing-table li.silver h3 {
-	background: #eee;
-	border-bottom: 2px dotted #eee;
+	background:#eee;
+	color:#888;
+	border-bottom:2px dotted #eee;
 }
 
 ul.pricing-table li.silver .stamp {
@@ -2476,7 +2599,7 @@ ul.pricing-table a.buy:hover .icon-basket:before {
 
 #testimonials .block-bg {
 	opacity: 0.2;
-	background-image: url(../images/girlaaa.jpg);
+    background-image:url(../images/oc.jpg);
 }
 
 @media (max-width: 767px) {
@@ -2495,12 +2618,12 @@ ul.pricing-table a.buy:hover .icon-basket:before {
 ----------------------------------------------------------------------------------------*/
 
 .news-list {
-	border-top: 1px solid #eee;
+	border-top: 1px solid #333;
 	margin-bottom: 60px;
 }
 
 .news-list li {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #333;
 	padding: 60px 0;
 }
 
@@ -2510,6 +2633,7 @@ ul.pricing-table a.buy:hover .icon-basket:before {
 	text-transform: none;
 	margin: 0 0 25px 0;
 }
+
 
 .news-info {
 	margin: 0 0 30px 0;
@@ -2530,7 +2654,7 @@ ul.pricing-table a.buy:hover .icon-basket:before {
 
 .news-info>div .icon {
 	margin: 0 10px 0 0;
-	color: #ccc;
+	color: #666;
 }
 
 @media (max-width: 767px) {
@@ -2564,6 +2688,7 @@ ul.pricing-table a.buy:hover .icon-basket:before {
 #blog {
 	text-align: left;
 }
+.single-content{color:#ddd;}
 
 .single-content-sidebar h3 {
 	margin: 0 0 25px 0;
@@ -2599,6 +2724,8 @@ h2.head,
 	padding-top: 0;
 }
 
+.post-content{ color:#ccc;}
+
 .post-content img {
 	margin: 0 0 20px 0;
 }
@@ -2610,7 +2737,7 @@ h2.head,
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 1;
-	background: #ccc;
+	background: #333;
 	border-radius: 2px;
 	color: #fff;
 	letter-spacing: 1px;
@@ -2636,7 +2763,7 @@ h2.head,
 	width: 50px;
 	text-align: center;
 	line-height: 48px;
-	border: 1px solid #eee;
+	border: 1px solid #333;
 	border-radius: 50%;
 	color: #aaa;
 	z-index: 1;
@@ -2644,7 +2771,7 @@ h2.head,
 
 .post-pagination li.active a,
 .post-pagination li a:hover {
-	color: #444;
+	color: #fff;
 	border: 1px solid #00aeff;
 }
 
@@ -2657,8 +2784,8 @@ h2.head,
 	margin: -5px 0 0 -3px;
 	height: 10px;
 	width: 10px;
-	border-top: 1px solid #444;
-	border-left: 1px solid #444;
+	border-top: 1px solid #aaa;
+	border-left: 1px solid #aaa;
 	transform: rotate(-45deg);
 	-webkit-transform: rotate(-45deg);
 }
@@ -2672,8 +2799,8 @@ h2.head,
 	margin: -5px 0 0 -7px;
 	height: 10px;
 	width: 10px;
-	border-top: 1px solid #444;
-	border-right: 1px solid #444;
+	border-top: 1px solid #aaa;
+	border-right: 1px solid #aaa;
 	transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 }
@@ -2745,7 +2872,7 @@ h2.head,
 }
 
 .comment-body {
-	border-top: 1px solid #eee;
+	border-top: 1px solid #333;
 	position: relative;
 	padding: 40px 0 40px 80px;
 }
@@ -2768,19 +2895,19 @@ h2.head,
 }
 
 .comment-body .comment-data .author {
-	color: #444;
+	color: #aaa;
 	font-weight: bold;
 	padding-right: 20px;
 	font-size: 14px;
 }
 
 .comment-body .comment-data .date {
-	color: #ccc;
+	color: #666;
 	padding-right: 20px;
 }
 
 .comment-body .comment-data a {
-	color: #ccc;
+	color: #666;
 }
 
 
@@ -2789,7 +2916,7 @@ h2.head,
 }
 
 .comments #comment_form {
-	border: 1px solid #eee;
+	border: 1px solid #333;
 }
 
 .comments #comment_form:after {
@@ -2804,14 +2931,14 @@ h2.head,
 
 #comment_form .btn_send {
 	width: 100%;
-	background: #eee;
+	background: #333;
 	font-weight: bold;
-	color: #777;
+	color: #eee;
 	margin: 0;
 }
 
 #comment_form .form-group {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #333;
 }
 
 #comment_form .form-group label.error,
